# GMorpherSkl

./: CMakeLists.txt  README.md
GMorpher/: CMakeLists.txt
GMorpher/GMorpherBone_3DEMICP/: CMakeLists.txt
GMorpher/GMorpherBone_3DEMICP/include/: IEnergyTerm_EM_ceres.h  OptionParser.h  Solver_EM_ceres.h
GMorpher/GMorpherBone_3DEMICP/src/: EnergyTerm_EMPred_ceres.cpp  ICP_function.h  IEnergyTerm_EM_ceres.cpp  Solver_EM_ceres.cpp  source_joint.cpp  source_surface.cpp
GMorpher/GMorpherBone_3DEMICP/src/kernels_include/: kernel_ICP.h  kernel_ICPPred.h  kernel_NN.h
GMorpher/GMorpherBone_3DEMICP/src/kernels_src/: kernel_ICP.cu  kernel_ICPPred.cu  kernel_NN.cu
GMorpher/GMorpherBone_SilFitting/: CMakeLists.txt
GMorpher/GMorpherBone_SilFitting/include/: EnergyTerm_SilFit.h  LineRasterizer.h  OptionParser.h
GMorpher/GMorpherBone_SilFitting/src/: EnergyTerm_SilFit.cpp  source.cpp
GMorpher/libGMorpher/: CMakeLists.txt
GMorpher/libGMorpher/include/: EnergyTerm_2DPixelConstraint_ceres.h  EnergyTerm_3DConstraint_ceres.h  GraphUtils.h  IEnergyTerm_ceres.h  JointAnglePrior.h  Quaternions.h  RigidT.h  Solver_ceres.h
GMorpher/libGMorpher/src/: EnergyTerm_3DConstraint_ceres.cpp  GraphUtils.cpp  IEnergyTerm_ceres.cpp  JointAnglePrior.cpp  RigidT.cpp  Solver_ceres.cpp
GMorpher/libGMorpher_PatchedMesh/: CMakeLists.txt
GMorpher/libGMorpher_PatchedMesh/include/: ClusteredCVTCloud.h  EnergyTerm_BoneBinding_ceres.h  EnergyTerm_Rigidity_CEDRIC_ceres.h  EnergyTerm_cvtRigidity_CEDRIC_ceres.h  SkelAdjacency_Builder.h
GMorpher/libGMorpher_PatchedMesh/src/: EnergyTerm_BoneBinding_ceres.cpp  EnergyTerm_Rigidity_CEDRIC_ceres.cpp  EnergyTerm_cvtRigidity_CEDRIC_ceres.cpp  SkelAdjacency_Builder.cpp
baseLibs/: CMakeLists.txt
baseLibs/libCC3D/: CMakeLists.txt
baseLibs/libCC3D/include/CC3D/: RigidMotion.h  float3.h  quaternions.h  rigidT.h
baseLibs/libCC3D/src/: RigidMotion.cpp
baseLibs/libIndexedMesh/: CMakeLists.txt
baseLibs/libIndexedMesh/include/: Voxelization.h
baseLibs/libIndexedMesh/include/IndexedMesh/: ColorVec.h  IndexedMesh3D.h
baseLibs/libIndexedMesh/src/: IndexedMesh3D.cpp  Voxelization.cpp
baseLibs/libMVLib/: CMakeLists.txt
baseLibs/libMVLib/include/: MVLib.h
baseLibs/libMVLib/src/: BuildFilename.cpp  Camera.cpp  CameraSetup.cpp  ColorConvert.cpp  ImgProcess.cpp  LineDrawer.cpp
baseLibs/libMetaImg/: CMakeLists.txt
baseLibs/libMetaImg/include/: MetaImg.h
baseLibs/libMetaImg/src/: MetaImg.cpp
baseLibs/libRendererOffScreen/: CMakeLists.txt
baseLibs/libRendererOffScreen/include/: IGLRenderJob.h  Renderer.h
baseLibs/libRendererOffScreen/src/: GLerrors.cpp  GLerrors.h  Renderer.cpp
libs/: CMakeLists.txt
libs/libPatchedCloud/: CMakeLists.txt
libs/libPatchedCloud/include/: PatchedCloud.h  Patching.h  RiggedMesh.h  Skl.h
libs/libPatchedCloud/src/: PatchedCloud.cpp  Patching.cpp  Patching_func.cpp  Patching_func.h  Patching_impl.h  RiggedMesh.cpp  Skl.cpp  cloud_build.cpp  cloud_interp.cpp  cloud_transform.cpp  skl_build.cpp  skl_fromCloud.cpp  skl_transform.cpp  skl_util.cpp
